infra/K8/booking-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-module-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-pod
  template:
    metadata:
      labels:
        app: booking-pod
    spec:
      containers:
        - name: booking-contr
          # image: public.ecr.aws/s8j2k2x6/booking
          image: 557571305961.dkr.ecr.us-east-1.amazonaws.com/booking:latest
          volumeMounts: #mount the volume from POD into the container
            - name: config-env-vol
              mountPath: /app/env
      volumes: #mount a volume to the POD
        - name: config-env-vol
          configMap:
            name: booking-svc-config
---
apiVersion: v1
kind: Service
metadata:
  name: booking-srv
spec:
  selector:
    app: booking-pod
  ports:
    - name: booking-port
      protocol: TCP
      port: 5000
      targetPort: 5000
