infra/K8/prometheus-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-srv
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: server
  ports:
    - name: prom-port
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30000

---
apiVersion: v1
kind: Service
metadata:
  name: graphana-srv
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: grafana
  ports:
    - name: graph-port
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
