infra/K8/tour-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tour-module-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tour-pod
  template:
    metadata:
      labels:
        app: tour-pod
    spec:
      containers:
        - name: tour-contr
          image: public.ecr.aws/s8j2k2x6/tour
---
apiVersion: v1
kind: Service
metadata:
  name: tour-srv
spec:
  selector:
    app: tour-pod
  ports:
    - name: tour-port
      protocol: TCP
      port: 5000
      targetPort: 5000
