infra/K8/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-module-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-pod
  template:
    metadata:
      labels:
        app: user-pod
    spec:
      containers:
        - name: user-contr
          image: public.ecr.aws/s8j2k2x6/user
          # image: 557571305961.dkr.ecr.us-east-1.amazonaws.com/user:latest
          volumeMounts: #mount the volume from POD into the container
            - name: config-env-vol
              mountPath: /app/env
            # - name: secret-env-vol
            #   mountPath: /app/env/secret
      volumes: #mount a volume to the POD
        - name: config-env-vol
          configMap:
            name: user-svc-config
        # - name: secret-env-vol
        #   secret:
        #     secretName: tour-global-secret
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user-pod
  ports:
    - name: user-port
      protocol: TCP
      port: 5000
      targetPort: 5000
